Second page started, about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -23,9 +23,10 @@
 <header>
 
       <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
 
         <nav class="navbar navbar-expand-md fixed-top navbar-light" role="navigation">
-
             <div class="col-2 d-md-none menu-toggle mt-2">
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
                 data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,31 +49,53 @@
             </a>
         </div>
 
-        <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
+       <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
             <ul class="navbar-nav">
                 <li class="navbar-item">
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">About us</a>
+                    <a href="aboutus.html" class="nav-link">About us</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">Menu&Delivery</a>
+                    <a href="menu.html" class="nav-link">Menu&Delivery</a>
                 </li>
                 <li class="navbar-item">
-                <a href="#" class="nav-link">Events</a>
+                <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">Contacts</a>
+                    <a href="contacts.html" class="nav-link">Contacts</a>
                 </li>
             </ul>
         </div>
    </nav>
-   </div>
-    <div>
-        <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
+            </div>
+        </div>
     </div>
-</header>
+   </header>
+
+
+<section class="container-fluid">
+        <div style="margin:120px 4px 5px;" class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <img id="team-img" src="assets/img/team.jpg" class="img-fluid"  alt="owners picture, two ladies and a man.">
+            </div>
+            <div id="ourstory" class="col-lg-6 col-md-6 col-sm-12">
+                <h3>Our Story</h3>
+                    <p>
+                    We opened in 2008 from an idea of David Spigaglia, who worked every year in very popular bars since he was 15 years old.
+                    The start was focused on understanding what managing the different offers of our bar actually meant. <br>In a couple of years we became the benchmark for the Summer weekend nights in Bolsena,
+                    we specialized ourselves on drinks and enjoyed hosting parties and music from local passionate dj's wich were playing in various important clubs at that time.
+                    After a three years period of this kind we moved our focus on another side of our job, lunch and aperitivo.<br>
+                    We introduced Salads and Sandwitches for lunch and expanded our offer in the evening with finger food and canape's of our choice.<br>
+                    2012 represents our turning point on understanding another aspect of our job, icecream. We discovered a whole new world that stimulates and keeps us busy till today.
+                    </p>
+            </div>
+        </div>
+    </section>
+
+
+
 
 <footer id="definitive">
     <div class="container-fluid">
@@ -80,40 +103,39 @@
             <div class="col-3 col-sm-12" id="foot-logo">
                 <img max-width="200" max-height="100" src="assets/img/logo.png"  alt="logo" >
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div  class="col-md-4 col-sm-4">
                 <h3>Contact</h3>
-		            <p><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-		            <p><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
-		            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+		            <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
+		            <p class="space"><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
+		            <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
             </div>
-                
                     <div class="col-3 col-md-4 col-sm-4">
                         <div class="row">
                             <div class="col">
-                                <h3>More to Find Out</h3>
+                                <h3 id="moreto">More to Find Out</h3>
                             </div>
                         </div>
                 <div class="row">
                     <div class="col-3 col-sm-4">
-                        <p><a href="index.html">Home</a></p>
-                        <p><a href="aboutus.html">About Us</a></p>
-                        <p><a href="menu.html">Menu&Delivery</a></p>
-                        <p><a href="events.html">Events</a></p>
-                        <p><a href="contacts.html">Contacts</a></p>
+                        <p class="space"><a href="index.html">Home</a></p>
+                        <p class="space"><a href="aboutus.html">About Us</a></p>
+                        <p class="space"><a href="menu.html">Menu&Delivery</a></p>
+                        <p class="space"><a href="events.html">Events</a></p>
+                        <p class="space"><a href="contacts.html">Contacts</a></p>
                     </div>
                     </div>
                     </div>
                       <div class="row">
-                        <div class="col-6 col-sm-12">
-                        <ul>
+                        <div class=" col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                        <ul style="list-style-type: none;">
                             <li>
-                            <a href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square"></i>
+                            <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>
                             </li>
                             <li>
-                            <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square"></i>
+                            <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square sochild"></i>
                             </li>
                             <li>
-                            <a href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square"></i>
+                            <a  href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square sochild"></i>
                             </li>
                         </ul>
                         </div>
