--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">About us</a>
+                    <a href="aboutus.html" class="nav-link">About us</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">Menu&Delivery</a>
+                    <a href="menu.html" class="nav-link">Menu&Delivery</a>
                 </li>
                 <li class="navbar-item">
-                <a href="#" class="nav-link">Events</a>
+                <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">Contacts</a>
+                    <a href="contacts.html" class="nav-link">Contacts</a>
                 </li>
             </ul>
         </div>
@@ -109,7 +109,7 @@
                 <img id="so-fresh" src="assets/img/quality-eh.jpg" alt="fresh fruit out of an icecream cone">
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 text-center position">
-                <div style="margin-bottom:65px;">
+                <div style="margin-bottom:65px;" id="override">
                     <h3 class="first-h">Quality <i class="fas fa-check-circle icon"></i></h3>
                         <p>The ingredients selection and our experience guarantee for the high quality of our icecream. </p>
                 </div>
@@ -140,19 +140,19 @@
 <div class="container-fluid">
         <section class="quotes">
             <div class="row">
-                <div class="col-12 my-5">
+                <div class="col-12 my-5 text-center">
                     <h2>Quotes:</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 text-center">
                     <div>
-                        <div class="d-none d-sm-block">
-                            <img src="assets/img/man-by-TimSavage.jpg" class="rounded-circle mr-3" height=100 width=100>
+                        <div >
+                            <img src="assets/img/man-by-TimSavage.jpg" class="rounded-circle mr-3" height=150 width=200>
                         </div>
                         <div>
                             <blockquote>
-                                <p>The Oasis is one of my favorite bars when I come to take a walk in Bolsena in the summer. 
+                                <p>Oasi is one of my favorite bars when I come to take a walk in Bolsena in the summer. 
                                 The ice cream is excellent and the prices of beer and drinks are definitely below average. 
                                 There are often live music shows that make this place even more enjoyable. Absolutely recommended.</p>
                                 <p>- Claudio Marini</p>
@@ -160,10 +160,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 text-center">
                     <div >
-                        <div class="d-none d-sm-block">
-                            <img src="assets/img/woman-by-AndreaPiacquadio.jpg" class="rounded-circle mr-3" height=100 width=100>
+                        <div>
+                            <img src="assets/img/woman-by-AndreaPiacquadio.jpg" class="rounded-circle mb-3" height=150 width=200>
                         </div>
                         <div>
                             <blockquote>
@@ -207,7 +207,7 @@
                     </div>
                     </div>
                       <div class="row">
-                        <div class="col-6 col-sm-12">
+                        <div class="col-6 col-md-12 col-sm-12">
                         <ul style="list-style-type: none;">
                             <li>
                             <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>
