--- a/events.html
+++ b/events.html
@@ -54,16 +54,16 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">About us</a>
+                    <a href="aboutus.html" class="nav-link">About us</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">Menu&Delivery</a>
+                    <a href="menu.html" class="nav-link">Menu&Delivery</a>
                 </li>
                 <li class="navbar-item">
-                <a href="#" class="nav-link">Events</a>
+                <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">Contacts</a>
+                    <a href="contacts.html" class="nav-link">Contacts</a>
                 </li>
             </ul>
         </div>
@@ -80,40 +80,39 @@
             <div class="col-3 col-sm-12" id="foot-logo">
                 <img max-width="200" max-height="100" src="assets/img/logo.png"  alt="logo" >
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div  class="col-md-4 col-sm-4">
                 <h3>Contact</h3>
-		            <p><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-		            <p><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
-		            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+		            <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
+		            <p class="space"><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
+		            <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
             </div>
-                
                     <div class="col-3 col-md-4 col-sm-4">
                         <div class="row">
                             <div class="col">
-                                <h3>More to Find Out</h3>
+                                <h3 id="moreto">More to Find Out</h3>
                             </div>
                         </div>
                 <div class="row">
                     <div class="col-3 col-sm-4">
-                        <p><a href="index.html">Home</a></p>
-                        <p><a href="aboutus.html">About Us</a></p>
-                        <p><a href="menu.html">Menu&Delivery</a></p>
-                        <p><a href="events.html">Events</a></p>
-                        <p><a href="contacts.html">Contacts</a></p>
+                        <p class="space"><a href="index.html">Home</a></p>
+                        <p class="space"><a href="aboutus.html">About Us</a></p>
+                        <p class="space"><a href="menu.html">Menu&Delivery</a></p>
+                        <p class="space"><a href="events.html">Events</a></p>
+                        <p class="space"><a href="contacts.html">Contacts</a></p>
                     </div>
                     </div>
                     </div>
                       <div class="row">
                         <div class="col-6 col-sm-12">
-                        <ul>
+                        <ul style="list-style-type: none;">
                             <li>
-                            <a href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square"></i>
+                            <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>
                             </li>
                             <li>
-                            <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square"></i>
+                            <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank"></a> <i class="fab fa-instagram-square sochild"></i>
                             </li>
                             <li>
-                            <a href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square"></i>
+                            <a  href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square sochild"></i>
                             </li>
                         </ul>
                         </div>
