continuing about us, pictures added

--- a/aboutus.html
+++ b/aboutus.html
@@ -83,13 +83,33 @@
             <div id="ourstory" class="col-lg-6 col-md-6 col-sm-12">
                 <h3>Our Story</h3>
                     <p>
-                    We opened in 2008 from an idea of David Spigaglia, who worked every year in very popular bars since he was 15 years old.
+                    We opened in 2008 from an idea of David Spigaglia, who worked every year in very popular bars since he was 15 years old.<br>
                     The start was focused on understanding what managing the different offers of our bar actually meant. <br>In a couple of years we became the benchmark for the Summer weekend nights in Bolsena,
                     we specialized ourselves on drinks and enjoyed hosting parties and music from local passionate dj's wich were playing in various important clubs at that time.
                     After a three years period of this kind we moved our focus on another side of our job, lunch and aperitivo.<br>
                     We introduced Salads and Sandwitches for lunch and expanded our offer in the evening with finger food and canape's of our choice.<br>
                     2012 represents our turning point on understanding another aspect of our job, icecream. We discovered a whole new world that stimulates and keeps us busy till today.
                     </p>
+            </div>
+        </div>
+    </section>\
+    <section style="margin-top:25px;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Wishing for something different?</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <img src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
+                </div>
+                <div class="col-4">
+                    <img src="assets/img/crunchies.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
+                </div>
+                <div class="col-4">
+                    <img src="assets/img/ice-cake.jpg" alt="strawberry icecream donut-shaped cake">
+                </div>
             </div>
         </div>
     </section>
