started Menu&Delivery, moved content from aboutus to menu

--- a/menu.html
+++ b/menu.html
@@ -70,9 +70,31 @@
    </nav>
    </div>
     <div>
-        <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
+        <img id="impact-img" src="assets/img/oasi.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
     </div>
 </header>
+
+
+<section style="margin-top:25px;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3>Wishing for something different?</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mt-10 ml-10">
+                    <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mt-10 ml-10">
+                    <img class="differs" src="assets/img/crunchies.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mt-10 ml-10">
+                    <img class="differs" src="assets/img/ice-cake.jpg" alt="strawberry icecream donut-shaped cake">
+                </div>
+            </div>
+        </div>   
+    </section>
 
 <footer id="definitive">
     <div class="container-fluid">
