not styled, all menu's added

--- a/menu.html
+++ b/menu.html
@@ -69,31 +69,66 @@
         </div>
    </nav>
    </div>
-    <div>
-        <img id="impact-img" src="assets/img/oasi.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
-    </div>
+            <div>
+                <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take away box, icecream flavours in the back">
+            </div>
 </header>
 
 
-<section style="margin-top:25px;">
-        <div class="container-fluid">
+<section style="margin-top:25px;" class="container-fluid">
             <div class="row">
-                <div class="col-12 text-center">
+                <div class="col-12 text-center first-h">
                     <h3>Wishing for something different?</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mt-10 ml-10">
                     <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
+                        <p class="monty">One of our glasscups, for you or to share</p>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mt-10 ml-10">
                     <img class="differs" src="assets/img/crunchies.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
+                        <p class="monty">A bite of artisanal crunch</p>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mt-10 ml-10">
                     <img class="differs" src="assets/img/ice-cake.jpg" alt="strawberry icecream donut-shaped cake">
+                        <p class="monty">Sunday with your family? Birthday? One of our cakes might be your choice</p>
+                </div>
+            </div>  
+    </section>
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3>Check all our Menu's</h3>
                 </div>
             </div>
-        </div>   
+            <div class="row">
+                <div class="col-4">
+                    <a href="assets/PDF/convert-jpg-to-pdf.net-Drink.pdf" target="_blank" rel="noopener noreferrer">Drinks</a>
+                </div>
+                <div class="col-4">
+                    <a href="assets/PDF/convert-jpg-to-pdf.net-Food.pdf" target="_blank" rel="noopener noreferrer">Food</a>
+                </div>
+                <div class="col-4">
+                    <a href="assets/PDF/smallpdf-ice.pdf" target="_blank" rel="noopener noreferrer">icecream</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3>Our quality at your doorstep, here's our delivery!</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <img src="assets/img/delivery-menu1.jpg" alt="icream delivery menu">
+                </div>
+                <div class="col-6">
+                    <img src="assets/img/delivery-menu1.jpg" alt="icream delivery menu">
+                </div>
+            </div>
+        </div>
+    
     </section>
 
 <footer id="definitive">
