--- a/aboutus.html
+++ b/aboutus.html
@@ -4,12 +4,6 @@
 <title>Bar Gelateria Oasi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7a907b57fb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -26,7 +20,8 @@
         <div class="row">
             <div class="col-12">
 
-        <nav class="navbar navbar-expand-md fixed-top navbar-light" role="navigation">
+     <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
+
             <div class="col-2 d-md-none menu-toggle mt-2">
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
                 data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,13 +44,13 @@
             </a>
         </div>
 
-       <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
+        <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
             <ul class="navbar-nav">
                 <li class="navbar-item">
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="aboutus.html" class="nav-link">About us</a>
+                    <a href="aboutus.html" class="nav-link active">About us</a>
                 </li>
                 <li class="navbar-item">
                     <a href="menu.html" class="nav-link">Menu&Delivery</a>
@@ -68,7 +63,7 @@
                 </li>
             </ul>
         </div>
-   </nav>
+     </nav>
             </div>
         </div>
     </div>
@@ -155,5 +150,13 @@
 
 </footer>
     
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7a907b57fb.js" crossorigin="anonymous"></script>
+    <script src="myScript.js"></script>    
 </body>
 </html>
