styled the footer, responsive.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="container-fluid">
         <div class="row mt-3">
             <div class="col-12">
-                <h3 style="float:left;">More To Find Out</h3>
+                <h3 id="moreto" style="float:left;">More To Find Out</h3>
             </div>
         </div>
         <div class="row">
@@ -195,6 +195,7 @@
                     <a class="order" href="menu.html">Menu&Delivery</a>
                     <a class="order" href="contacts.html">Contacts</a>
                 </p>
+                <p class="footer-company-name">BarGelateriaOasi©2008</p>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
 		            <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
