--- a/menu.html
+++ b/menu.html
@@ -73,7 +73,7 @@
 <section style="margin-top:25px;" class="container-fluid">
             <div class="row">
                 <div class="col-12 text-center first-h">
-                    <h3>Wishing for something different?</h3>
+                    <h2>Wishing for something different?</h2>
                 </div>
             </div>
             <div class="row text-center">
@@ -95,7 +95,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="checkall">Check all our Menu's</h2>
+                    <h2>Check all our Menu's</h2>
                 </div>
             </div>
             <div class="row text-center">
@@ -112,7 +112,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="checkall">Our quality at your doorstep, here some delivery options!</h2>
+                    <h2>Our quality at your doorstep, here some delivery options!</h2>
                 </div>
             </div>
             <div class="row text-center">
