--- a/contacts.html
+++ b/contacts.html
@@ -64,7 +64,7 @@
       </nav>
    </div>
     <div>
-        <img id="impact-img" src="assets/img/wonderful-ice.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
+        <img id="aboutimt" src="assets/img/aboutimg.jpg" class="img-fluid"  alt="straweberry icecream on a plate, with berries.">
     </div>
 </header>
 
@@ -72,43 +72,29 @@
 
     <div class="container-fluid">
         <div class="row mt-3">
-            <div  class="col-12">
-                <h3>Contact</h3>
+            <div class="col-12">
+                <h3 id="moreto" style="float:left;">More To Find Out</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <p>
+                    <a class="order" href="index.html">Home</a>
+                    <a class="order" href="aboutus.html">About Us</a>
+                    <a class="order" href="menu.html">Menu&Delivery</a>
+                    <a class="order" href="contacts.html">Contacts</a>
+                </p>
+                <p class="footer-company-name">BarGelateriaOasi©2008</p>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
 		            <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
 		            <p class="space"><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
 		            <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
             </div>
         </div>
-    <div class="container-fluid">
-        <div class="row mt-3">
-                    <div class="col-12">
-                        <h3 id="moreto">More to Find Out</h3>
-                    </div>
-        </div>
-        <div class="row">
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                        <p class="space"><a href="index.html">Home</a></p>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-122">
-                        <p class="space"><a href="aboutus.html">About Us</a></p>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                        <p class="space"><a href="menu.html">Menu&Delivery</a></p>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                        <p class="space"><a href="contacts.html">Contacts</a></p>
-            </div>
-        </div>
     </div>
-        <div class="row text-center mt-3 mb-4">
+        
+        <div class="row text-center mt-3 pb-2">
             <div class="col-4">
                 <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank"></a> <i class="fab fa-facebook-square sochild"></i>    
             </div>
@@ -120,8 +106,7 @@
                  <a  href="contacts.html" target="_blank"></a>  <i class="fab fa-whatsapp-square sochild"></i>
             </div>
                         
-         </div>
-    </div> 
+         </div> 
 
 
 </footer>
