--- a/contacts.html
+++ b/contacts.html
@@ -77,17 +77,16 @@
         </div>
         <div class="row">
 
-            <div class="col-6 col-sm-12">
+            <div class="col-xl-6 col-lg-6 col-md-6  col-sm-12">
+                <p>These are our contacts where you can always find us: </p>
                 <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-		        <p class="space"><i class="fas fa-phone"></i> Phone: 0039 555 55 55 555</p>
+		        <p class="space"><i class="fas fa-phone"></i> Phone: 338 52 44 261</p>
 		        <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
             </div>
 
-            <div class="col-6 col-sm-12">
-                
-                <p>These are our contacts where you can always find us </p>
+            <div class="col-xl-6 col-lg-6 col-md-6  col-sm-12">
             
-               <p>If you have any more specific request about a party or our delivery routes you can use our form below and explain us what we can do for you, we'll get in touch asap</p>
+               <p id="floater">If you have any more specific requests about a party you want to give, or our delivery routes you can use our form below and explain us what we can do for you, we'll get in touch asap</p>
             </div>
         </div>
     </div>
@@ -113,7 +112,7 @@
                     </div>
                     <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-12">
                         <div class="input-group date" id="datetimepicker11">
-                            <input type="text" class="form-control" />
+                            <input type="text" class="form-control" placeholder="Date*" required />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar">
                                     </span>
@@ -143,13 +142,13 @@
   </div>
 </div>
 
-   <div class="container-fluid" style="margin:0 auto;">
+   <div class="container-fluid" >
     <div class="row">
         <div class="col-12">
             <h3 style="float:left;">Explanation / Description</h3>
         </div>
     </div>
-  <div class="form-group" style="margin: 0 auto;">
+  <div class="form-group">
     <textarea class="form-control" id="explain" rows="5"></textarea>
   </div>
 
